Fix top margin on mobile menu view

--- a/_sass/base.sass
+++ b/_sass/base.sass
@@ -82,14 +82,13 @@ a
       z-index: 2
       width: 100%
       height: 100vh
-      padding-top: 10px
       transition: width 0.5s, height 0.5s, transform 0.5s
       transform: translateY(100%)
       &.opened
         transform: translateY(0)
       ol
         margin: 0
-        padding: 0
+        padding: 10px 0 0 0
         display: flex
         height: 100vh
         background: rgba($base-color, 0.85)
